# agile-ai

backend/: .env.template  .gitignore  Dockerfile  Makefile  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 423dd6592876_basic_kanban_board_database.py  9e8b15fe9e03_init.py  eb6307302f36_users_table.py
backend/app/: config.py  logger.py  main.py
backend/app/routers/: __init__.py  kanban.py  resume.py  users.py
backend/app/utils/: minio.py
backend/app/utils/models/: __init__.py  kanban.py  resume.py  users.py
backend/app/utils/postgres/: __init__.py  base.py  schema.py
backend/src/: app.js
backend/src/controllers/: projectController.js  taskController.js  userController.js
backend/src/models/: Project.js  Task.js  User.js
backend/src/routes/: index.js  projects.js  tasks.js  users.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: KanbanBoard.tsx  Layout.tsx  Sidebar.tsx  TaskCard.tsx  TaskForm.tsx  TeamCard.tsx
frontend/src/pages/: Account.tsx  Dashboard.tsx  Login.tsx  Signup.tsx  Team.tsx
frontend/src/store/: authStore.ts  taskStore.ts  teamStore.ts
frontend/src/types/: index.ts
