[tool.poetry]
name = "agile-ai"
version = "0.1.0"
description = "Jira on steroids"
authors = ["Devasheesh Mishra <devasheeshmishra4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
colorlog = "^6.9.0"
alembic = "^1.14.0"
uvicorn = "^0.34.0"
openai = "^1.59.4"
minio = "^7.2.15"
toml = "^0.10.2"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
